# traffic-detection

./: README.md  detector.py  main.py  pyproject.toml  requirements.txt  utils.py
data/test_images/: 15-delhi-indian-cities.avif
